# MockEngine

./: .gitignore  CMakeLists.txt  conanfile.txt  generate_project_file.bat
.github/workflows/: clang-format-checker.yml  linux-build.yml  windows-build.yml
Automation/: automation.py  build.bat
Automation/CMAKE/: CMakeHelpers.cmake
Engine/: CMakeLists.txt  EngineConfig.h.template
Engine/Source/: main.cpp
Engine/Source/Core/: Engine.cpp  Engine.h  Utility.h
Engine/Source/Log/: Log.cpp  Log.h
